# xmp-plugin-audacious

./: Makefile.am  audacious3.c  configure.ac
src/: Makefile.am  audxmp.cpp
